# gravys

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  query_gravys.sql
backend/: pyproject.toml
backend/app/: api.py
backend/tests/: conftest.py  test_app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Login.tsx  Neo4jNodes.tsx  TodoGraph.tsx  Todos.tsx
frontend/src/contexts/: AuthContext.ts  RefreshContext.ts
static/: temp_login.html
tests/: conftest.py  test_ui.py
